--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "bin": {
     "lef": "dist/scripts/lef.min.js",
     "depend": "dist/scripts/depend.min.js",
-    "jspriority": "dist/scripts/jspriority.min.js"
+    "jspriority": "dist/scripts/jspriority.min.js",
+    "packageusage": "dist/scripts/packageusage.js"
   },
   "scripts": {
     "build": "tsc && npm run minify",
-    "minify": "terser dist/scripts/lef.js -o dist/scripts/lef.min.js --compress --mangle && terser dist/scripts/depend.js -o dist/scripts/depend.min.js --compress --mangle && terser dist/scripts/jspriority.js -o dist/scripts/jspriority.min.js --compress --mangle",
+    "minify": "terser dist/scripts/packageusage.js -o dist/scripts/packageusage.min.js --compress --mangle && terser dist/scripts/lef.js -o dist/scripts/lef.min.js --compress --mangle && terser dist/scripts/depend.js -o dist/scripts/depend.min.js --compress --mangle && terser dist/scripts/jspriority.js -o dist/scripts/jspriority.min.js --compress --mangle",
     "start": "node dist/index.js",
     "lef": "node dist/scripts/lef.min.js",
     "depend": "node dist/scripts/depend.min.js",
-    "jspriority": "node dist/scripts/jspriority.min.js"
+    "jspriority": "node dist/scripts/jspriority.min.js",
+    "packageusage": "node dist/scripts/packageusage.js"
   },
   "author": "",
   "license": "ISC",
